# signal_task

./: CMakeLists.txt  intrusive_list.h  signals.h
.github/workflows/: cmake.yml
